test/success/integration/_succ_expr_index_1.hs
x :: Char
x = "hello" !! 1
main = print x