test/fail/integration/_fail_sem_decl_type_1.hs
x, x :: Int
main = print "hello"